[MAJOR FIX] Changed "RestoreCord" mention to new name

--- a/src/assets/authRestoreGetPage.html
+++ b/src/assets/authRestoreGetPage.html
@@ -148,7 +148,7 @@
             <div class="header-left">
                 <img src="{author_pfp}" alt="Profile Picture">
                 <div class="header-text">
-                    <h1>RestoreCord</h1>
+                    <h1>AuthRestore</h1>
                     <p>{guild_name}</p>
                 </div>
             </div>
